Fix: username on top vertical-align.

--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,7 @@ textarea {
   overflow: hidden;
   text-overflow: "...";
   max-width: 14em;
+  vertical-align: bottom;
 }
 
 #menu {
